mdfy index and about

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "there are infinite paths and infinite possibilities, but you must open the door."
 ---
 
 {% for post in paginator.posts %}
